fix: race-condition on async ai processing (#55)
* fix: race-condition on async ai processing

* feat: increase test coverage